fix: align the button on center in footer for mobile

--- a/online-zoo/css/home.css
+++ b/online-zoo/css/home.css
@@ -2318,6 +2318,7 @@ html {
     grid-row-start: 5;
     grid-column: 1/3;
     margin-top: 1.85714rem;
+    justify-self: center;
   }
 }
 
