--- a/online-zoo/css/zoos.css
+++ b/online-zoo/css/zoos.css
@@ -1444,6 +1444,7 @@ html {
     grid-row-start: 5;
     grid-column: 1/3;
     margin-top: 1.85714rem;
+    justify-self: center;
   }
 }
 
