--- a/online-zoo/scss/layout/_footer.scss
+++ b/online-zoo/scss/layout/_footer.scss
@@ -70,6 +70,7 @@
     grid-row-start: 5;
     grid-column: 1/3;
     margin-top: rem(26, $text-size);
+    justify-self: center;
   }
 }
 
